Fix navbar z-index (#583)

--- a/app/packs/stylesheets/custom/_topbar.scss
+++ b/app/packs/stylesheets/custom/_topbar.scss
@@ -7,7 +7,7 @@
   right: 0px;
   left: 0px;
   width: 100%;
-  z-index: 1;
+  z-index: 1000;
   background: rgba(250, 250, 251, 0.7);
   backdrop-filter: blur(48px);
 }
